# cpp-inference

./: .gitignore  README.md
ML/: README.md  convert.py  export.py  model.onnx  requirements.txt  test_model.py  train.py
inference_server/: .dockerignore  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml
inference_server/.devcontainer/: devcontainer.json
inference_server/configs/: static_config.yaml
inference_server/src/: main.cpp
inference_server/src/batch/: batch_collector.cpp  batch_collector.hpp
inference_server/src/inference/: inference.cpp  inference.hpp
inference_server/src/predict/: predict_handler.cpp  predict_handler.hpp
inference_server/tests/: test_batch.cpp  test_inference.cpp
thread_pool/: CMakeLists.txt  README.md
thread_pool/include/: thread_pool.hpp
thread_pool/src/: main.cpp  server.cpp  server.hpp  thread_pool.cpp  thread_pool.hpp
thread_pool/src/inference/: inference.cpp  inference.hpp
